--- a/src/app/components/dudas/dudas.component.html
+++ b/src/app/components/dudas/dudas.component.html
@@ -14,7 +14,7 @@
     <div class="card" style="width: 18rem;">
         <img src="https://i.pinimg.com/236x/59/ce/ff/59ceff710bfd126f4e3d38c8e3026c92--php-student.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text"><a href="">Como iniciar sesion en AirbnV</a></p>
+          <p class="card-text"><a routerLink="/iniciar">Como iniciar sesion en AirbnV</a></p>
         </div>
     </div>
   </div>
