Info cómo seleccionar las fechas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,8 +83,10 @@
           <ul class="list-unstyled mb-0">
             <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro" class="text-muted">Registrarse</a></li>
             <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro" class="text-muted">Iniciar Sesión</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="home" class="text-muted">Nuestras casas</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="catalogo" class="text-muted">Nuestras casas</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="conocenos" class="text-muted">Conocenos</a></li>
             <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="dudas" class="text-muted">Dudas o preguntas</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="contactanos" class="text-muted">Contactanos</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
