Acomodar un QR que sale por ahí

--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -131,7 +131,7 @@
               allowfullscreen
             ></iframe>
 
-            <div class="qrcodeImage">
+            <div class="qrcodeImage justify-content-center">
               <qrcode
                 [qrdata]="valor"
                 [allowEmptyString]="true"
