admin de miembros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <div class="todo">
   <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
-    <div class="container-fluid" >
+    <div class="container-fluid">
       <a class="navbar-brand ms-0" routerLink="home">
         <img src="assets/Img/777.png" alt="" width="60" class="mb-3" class="nav777">
       </a>
-      <button class="navbar-toggler btn-outline-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler btn-outline-light" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -38,21 +40,30 @@
           <button routerLink="busqueda/{{busqueda}}" class="btn btn-outline-light ms-1" type="submit">Buscar</button>
         </form>
         <div class="btn-group">
-          <button id="inicioSesion" type="button" class="btn btn-outline-info ms-lg-3 mt-2 mt-lg-0" routerLink="registro">
+          <button id="inicioSesion" type="button" class="btn btn-outline-info ms-lg-3 mt-2 mt-lg-0"
+            routerLink="registro">
             <i class="fa-solid fa-user"></i> Iniciar Sesión/Registrarse
           </button>
-          <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split me-2 me-md-0 mt-2 mt-lg-0" data-bs-toggle="dropdown" aria-expanded="false">
+          <button type="button"
+            class="btn btn-outline-info dropdown-toggle dropdown-toggle-split me-2 me-md-0 mt-2 mt-lg-0"
+            data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-end">
             <li class="nav-item">
-              <button id="reservar" class="dropdown-item" routerLinkActive="active" disabled routerLink="reservaciones">Reservaciones</button>
+              <button id="reservar" class="dropdown-item" routerLinkActive="active" disabled
+                routerLink="reservaciones">Reservaciones</button>
             </li>
             <ng-container *ngIf="usuarioAdmin">
-              <button id="graficas" class="dropdown-item" routerLink="registro" (click) = "cerrarSesion()">Graficas</button>
+              <button id="graficas" class="dropdown-item" routerLink="registro"
+                (click)="cerrarSesion()">Graficas</button>
+            </ng-container>
+            <ng-container *ngIf="usuarioAdmin">
+              <button id="graficas" class="dropdown-item" routerLink="registro" routerLink="miembros">Miembros</button>
             </ng-container>
             <li>
-              <button id="cerrarSesion" class="dropdown-item" disabled routerLink="registro" (click) = "cerrarSesion()">Cerrar sesión</button>
+              <button id="cerrarSesion" class="dropdown-item" disabled routerLink="registro"
+                (click)="cerrarSesion()">Cerrar sesión</button>
             </li>
           </ul>
         </div>
@@ -75,25 +86,36 @@
       <div class="row py-4 justify-content-center">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="assets/Img/777.png" alt="" width="180" class="mb-3">
           <p class="font-italic text-muted">
-            AirbnV una empresa con el fin de vender casitas dentro de un videojuego siendo pioneros en la venta de inmobiliaria en Minecraft
+            AirbnV una empresa con el fin de vender casitas dentro de un videojuego siendo pioneros en la venta de
+            inmobiliaria en Minecraft
           </p>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
           <h6 class="text-uppercase font-weight-bold mb-4">Conocenos</h6>
           <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro" class="text-muted">Registrarse</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro" class="text-muted">Iniciar Sesión</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="home" class="text-muted">Nuestras casas</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="dudas" class="text-muted">Dudas o preguntas</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro"
+                class="text-muted">Registrarse</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro" class="text-muted">Iniciar
+                Sesión</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="home" class="text-muted">Nuestras
+                casas</a></li>
+            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="dudas" class="text-muted">Dudas o
+                preguntas</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
           <h6 class="text-uppercase font-weight-bold mb-4">Nuestras redes</h6>
           <ul class="list-inline" class="social">
-            <li class="list-inline-item"><a href="https://twitter.com/vegetta777?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_white" title="twitter" ><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=100085368251374&mibextid=ZbWKwL" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="https://instagram.com/tinus_bookstore?igshid=YmMyMTA2M2Y=" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.youtube.com/user/vegetta777" target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a></li>
+            <li class="list-inline-item"><a
+                href="https://twitter.com/vegetta777?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                target="_white" title="twitter"><i class="fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a
+                href="https://www.facebook.com/profile.php?id=100085368251374&mibextid=ZbWKwL" target="_blank"
+                title="facebook"><i class="fa fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="https://instagram.com/tinus_bookstore?igshid=YmMyMTA2M2Y="
+                target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.youtube.com/user/vegetta777" target="_blank"
+                title="vimeo"><i class="fa fa-vimeo"></i></a></li>
           </ul>
         </div>
         <!--<div class="social col-lg-4 col-md-6 mb-lg-0 ">
