--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,133 +1,9 @@
 <div class="todo">
-  <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand ms-0" routerLink="home">
-        <img src="assets/Img/777.png" alt="" width="60" class="mb-3" class="nav777">
-      </a>
-      <button class="navbar-toggler btn-outline-light" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="home">AirbnV</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="catalogo">Catálogo</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="skins">Usuarios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="inversiones">Inversionistas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="conocenos">Conocenos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="dudas">Dudas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="contactanos">Contactanos</a>
-          </li>
-        </ul>
-        <form class="d-flex my-1 my-lg-0 mt-lg-0" role="search">
-          <input class="form-control" id="termino" type="search" placeholder="Busqueda" aria-label="Search">
-          <button routerLink="busqueda/{{busqueda}}" class="btn btn-outline-light ms-1" type="submit">Buscar</button>
-        </form>
-        <div class="btn-group">
-          <button id="inicioSesion" type="button" class="btn btn-outline-info ms-lg-3 mt-2 mt-lg-0"
-            routerLink="registro">
-            <i class="fa-solid fa-user"></i> Iniciar Sesión/Registrarse
-          </button>
-          <button type="button"
-            class="btn btn-outline-info dropdown-toggle dropdown-toggle-split me-2 me-md-0 mt-2 mt-lg-0"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="visually-hidden">Toggle Dropdown</span>
-          </button>
-          <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-end">
-            <li class="nav-item">
-              <button id="reservar" class="dropdown-item" routerLinkActive="active" disabled
-                routerLink="reservaciones">Reservaciones</button>
-            </li>
-            <ng-container *ngIf="usuarioAdmin">
-
-              <button id="graficas" class="dropdown-item" routerLink="registro" routerLink="miembros">Miembros</button>
-              <button id="graficas" class="dropdown-item" routerLink="registro" routerLink="graficas">Graficas</button>
-            </ng-container>
-            <li>
-              <button id="cerrarSesion" class="dropdown-item" disabled routerLink="registro"
-                (click)="cerrarSesion()">Cerrar sesión</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-
-
-
-    </div>
-  </nav>
-
+  <app-navbar></app-navbar>
   <div class="container cuerpo">
     <div class="row my-5">
       <router-outlet></router-outlet>
     </div>
   </div>
-
-  <footer data-bs-theme="dark" class="navbar navbar-fixed-bottom">
-    <div class="container py-5">
-      <div class="row py-4 justify-content-center">
-        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="assets/Img/777.png" alt="" width="180" class="mb-3">
-          <p class="font-italic text-muted">
-            AirbnV una empresa con el fin de vender casitas dentro de un videojuego siendo pioneros en la venta de
-            inmobiliaria en Minecraft
-          </p>
-        </div>
-        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">Conocenos</h6>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro"
-                class="text-muted">Registrarse</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="registro" class="text-muted">Iniciar
-                Sesión</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="catalogo" class="text-muted">Nuestras
-                casas</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="conocenos"
-                class="text-muted">Conocenos</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="dudas" class="text-muted">Dudas o
-                preguntas</a></li>
-            <li class="mb-2"><a href="#" routerLinkActive="active" routerLink="contactanos"
-                class="text-muted">Contactanos</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">Nuestras redes</h6>
-          <ul class="list-inline" class="social">
-            <li class="list-inline-item"><a
-                href="https://twitter.com/vegetta777?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                target="_white" title="twitter"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a
-                href="https://www.facebook.com/profile.php?id=100085368251374&mibextid=ZbWKwL" target="_blank"
-                title="facebook"><i class="fa fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="https://instagram.com/tinus_bookstore?igshid=YmMyMTA2M2Y="
-                target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="https://www.youtube.com/user/vegetta777" target="_blank"
-                title="vimeo"><i class="fa fa-vimeo"></i></a></li>
-          </ul>
-        </div>
-        <!--<div class="social col-lg-4 col-md-6 mb-lg-0 ">
-            <a href="https://instagram.com/tinus_bookstore?igshid=YmMyMTA2M2Y=" target="_blank"><i class="icon ion-social-instagram"></i></a>
-            <a href="#" target="_blank"><i class="icon ion-social-twitter"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100085368251374&mibextid=ZbWKwL" target="_blank"><i class="icon ion-social-facebook"></i></a>
-        </div>-->
-      </div>
-    </div>
-
-
-  </footer>
+  <app-footer></app-footer>
 </div>
