--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="todo">
-  <app-navbar></app-navbar>
+  <app-navbar (nombreUsr)="mandarUsr($event)"></app-navbar>
   <div class="container cuerpo">
     <div class="row my-5">
       <router-outlet></router-outlet>
     </div>
   </div>
-  <app-footer></app-footer>
+  <app-footer [nombreUsr]="nombreUsr"></app-footer>
 </div>
