--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,13 @@
 <footer data-bs-theme="dark" class="navbar navbar-fixed-bottom">
     <div class="container py-5">
       <div class="row py-4 justify-content-center">
-        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="assets/Img/777.png" alt="" width="180" class="mb-3">
+        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+          <ng-container *ngIf="nombreUsr!==null">
+            <div class="row py-4">
+                Bienvenido {{nombreUsr}}
+            </div>
+          </ng-container>
+          <img src="assets/Img/777.png" alt="" width="180" class="mb-3">
           <p class="font-italic text-muted">
             AirbnV una empresa con el fin de vender casitas dentro de un videojuego siendo pioneros en la venta de
             inmobiliaria en Minecraft
