minimo cambio principal

--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -13,7 +13,7 @@
           fantasticas casas.
         </p>
         <div class="contenedor justify-content-center" >
-          <img class="logo" src="assets/Img/777.png" />
+          <img class="logo" src="assets/Img/777.png">
           <div class="overlay">
             <div class="text text-center">
               El logo de nuestra empresa representa la imagen que deseamos generar a
@@ -148,7 +148,7 @@
                 [width]="300"
               ></qrcode>
             </div>
-            
+
             <!--<img class="triple7" src="https://img.blogs.es/vizzagency/wp-content/uploads/2022/09/edit-4-3.jpg" alt="" srcset="">-->
           </div>
         </div>
