--- a/src/app/components/casa/casa.component.html
+++ b/src/app/components/casa/casa.component.html
@@ -41,7 +41,7 @@
     <div class="col-6 text-center centrar">
       <div class="card-text my-3 etiquetas">
         <p class="m-1">
-          <p-chip label="${{ casa.precio }}" icon="pi pi-money-bill"></p-chip>
+          <p-chip label="{{ casa.precio |  currency: 'USD' }}" icon="pi pi-money-bill"></p-chip>
         </p>
         <p class="m-1">
           <p-chip label="{{ casa.maxPersonas }}" icon="pi pi-user"></p-chip>
